// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should create new secret 1`] = `
Array [
  Array [
    "Generating new deployment secret for:",
    "http://localhost:8080",
  ],
  Array [
    "New secret generated:",
  ],
  Array [
    "",
  ],
  Array [
    "Name: test",
  ],
  Array [
    "Value: 12345",
  ],
  Array [
    "",
  ],
  Array [
    "DONE!",
  ],
]
`;

exports[`Should create new secret non-interactively 1`] = `
Array [
  Array [
    "Generating new deployment secret for:",
    "http://localhost:8080",
  ],
  Array [
    "New secret generated:",
  ],
  Array [
    "",
  ],
  Array [
    "Name: test",
  ],
  Array [
    "Value: 12345",
  ],
  Array [
    "",
  ],
  Array [
    "DONE!",
  ],
]
`;

exports[`Should deauth on 401 on creation 1`] = `
Array [
  Array [
    "Generating new deployment secret for:",
    "http://localhost:8080",
  ],
  Array [
    "Error: authorization expired!",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should deauth on 401 on list 1`] = `
Array [
  Array [
    "Listing deployment secrets for:",
    "http://localhost:8080",
  ],
  Array [
    "Error: authorization expired!",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should get secret value 1`] = `
Array [
  Array [
    "Getting deployment secret for:",
    "http://localhost:8080",
  ],
  Array [
    "New secret generated:",
  ],
  Array [
    "",
  ],
  Array [
    "Name: undefined",
  ],
  Array [
    "Value: undefined",
  ],
  Array [
    "Date: 2/1/2018, 1:01:01 AM",
  ],
]
`;

exports[`Should list secrets 1`] = `
Array [
  Array [
    "Listing deployment secrets for:",
    "http://localhost:8080",
  ],
  Array [
    "Got saved secrets:",
  ],
  Array [
    "",
  ],
  Array [
    "  > @test []",
  ],
]
`;

exports[`Should list zero secrets 1`] = `
Array [
  Array [
    "Listing deployment secrets for:",
    "http://localhost:8080",
  ],
  Array [
    "Got saved secrets:",
  ],
  Array [
    "",
  ],
  Array [
    "  > No deployment secrets available!",
  ],
]
`;

exports[`Should remove secret 1`] = `
Array [
  Array [
    "Removing deployment secret for:",
    "http://localhost:8080",
  ],
  Array [
    "Deployment secret successfully removed!",
  ],
]
`;
